# fastapi-sqlmodel-alembic-pg

./: .env.example  README.md  alembic.ini  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 3c7976a81e7d_initial_migration.py  848c0aaaabbc_backpopulate.py  a312ee780480_itemcreate_id.py  b3342e1d1327_items.py  e9eb9efa79d9_initial_migration.py  fdf493a81ad6_items.py
